--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,11 @@ ul {
   padding: 0 20px;
 }
 
+.contain {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 header {
   height: 70px;
   width: 100%;
@@ -30,6 +35,21 @@ header {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 30px;
+}
+
+.right {
+  display: flex;
+  justify-content: space-around;
+  color: white;
+}
+
+.active {
+  background: rgb(175, 170, 170, 0.7);
+  color: white;
+  text-decoration: none;
+  padding: 0.5rem;
+  border: none;
+  border-radius: 30%;
 }
 
 .card {
